<resources>
    <string name="app_name">Vastra</string>
    <string name="title_orders">Orders</string>
    <string name="title_products">Products</string>
    <string name="title_profile">Profile</string>
    <string name="btn_next">Next</string>
    <string name="create_catalogue_msg">A catalogue will have one or more products, will be visible to shoppers for selling.</string>
    <string name="label_create_catalogue">Let\'s start by creating a catalogue</string>
    <string name="msg_create_catalogue">Enter title of catalogue</string>
    <string name="label_catalogue">Catalogue Title</string>
    <string name="catalogue_name">Catalogue Name</string>
    <string name="product_desc_msg">What product you are ready to sell?</string>
    <string name="add_product_msg">Add product into the catalogue.</string>
    <string name="btn_back">back</string>
    <string name="que_product_one">What the product is for?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both">Both</string>
    <string name="que_product_two">Select age group</string>
    <string name="kids">Kids</string>
    <string name="adult">Adult</string>
    <string name="label_min_age">Minimum age</string>
    <string name="label_max_age">Maximum age</string>
    <string name="label_age">age</string>
    <string name="label_product_type">Select Product Type</string>
    <string name="label_product">Product type</string>
    <string name="ok">OK</string>
    <string name="label_product_name">Product Name</string>
    <string name="title_available_colors">Product Colors</string>
    <string name="desc_available_colors">Select all available colors for this product.</string>
    <string name="label_product_title">Product Title</string>
    <string name="label_product_price">Price (CAD)</string>
    <string name="label_product_multipack_set">Multipack Set</string>
    <string name="label_product_weight">Weight (lb) (to calculate shipping cost)</string>
    <string name="label_product_material">Material</string>
    <string name="label_product_percentage">%</string>
    <string name="link_add_more">Add more</string>
    <string name="label_occassion">Occasion</string>
    <string name="label_pattern">Pattern</string>
    <string name="label_select_season">Select season</string>
    <string name="season_winter">Winter</string>
    <string name="season_spring">Spring</string>
    <string name="season_summer">Summer</string>
    <string name="season_fall">Fall</string>
    <string name="label_wash_care">Wash care</string>
    <string name="label_trend">Trend</string>
    <string name="knit">Knit</string>
    <string name="woven">Woven</string>
    <string name="btn_decrement">-</string>
    <string name="btn_increment">+</string>
    <string name="label_select_qty">Select quantity</string>
    <string name="label_one">1</string>
    <string name="select_occassion">Select Occasion</string>
    <string name="select_pattern">Select Pattern</string>
    <string name="select_province">Select Province</string>
    <string name="select_washcare">Select Washcare</string>
    <string name="title_prominent_color">Select Prominent Color</string>
    <string name="title_secondary_color">Select Secondary Color</string>
    <string name="title_tertiary_color">Select Tertiary Color</string>
    <string name="btn_done">Done</string>
    <string name="add">Add</string>
    <string name="btn_add_more">Add More</string>
    <string name="title_add_sizes">Add Sizes</string>
    <string name="desc_add_sizes">Select all available sizes for this product.</string>
    <string name="one_size">One size</string>
    <string name="letter_size">Letter size</string>
    <string name="size_by_weight">Size by weight (g)</string>
    <string name="size_by_volume">Size by volume (ml)</string>
    <string name="custom_size">Custom size</string>
    <string name="size_xs">XS</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
    <string name="size_xl">XL</string>
    <string name="size_2xl">2XL</string>
    <string name="size_3xl">3XL</string>
    <string name="size_4xl">4XL</string>
    <string name="size_5xl">5XL</string>
    <string name="size_6xl">6XL</string>
    <string name="size_7xl">7XL</string>
    <string name="size_8xl">8XL</string>
    <string name="size_9xl">9XL</string>
    <string name="hint_weight">Enter weight (g)</string>
    <string name="hint_volume">Enter volume (ml)</string>
    <string name="hint_custom_size">Enter custom size</string>
    <string name="title_product_sizes">Product Sizes</string>
    <string name="desc_product_sizes_1">Fill this size chart</string>
    <string name="desc_product_sizes_2">Enter all applicable measurements of all available sizes of the product.</string>
    <string name="label_US_size">US Size</string>
    <string name="label_head_circumference">Head Circumference</string>
    <string name="label_neck">Neck</string>
    <string name="label_bust">Bust</string>
    <string name="label_waist">Waist</string>
    <string name="label_hip">Hip</string>
    <string name="label_inseam_length">Inseam Length</string>
    <string name="label_outseam_length">Outseam Length</string>
    <string name="label_sleeve_length">Sleeve Length</string>
    <string name="label_wrist">Wrist</string>
    <string name="label_foot_length">Foot Length</string>
    <string name="label_front_length">Front Length</string>
    <string name="label_back_length">Back Length</string>
    <string name="label_width">Width</string>
    <string name="btn_update_sizes">Edit Sizes</string>
    <string name="fix_size">Fix size</string>
    <string name="fix_size_hint">Enter size in inches</string>
    <string name="size_range">Size range</string>
    <string name="min_size_hint">Min size in inches</string>
    <string name="max_size_hint">Max size in inches</string>
    <string name="label_description">Description</string>
    <string name="label_product_images">Upload product images</string>
    <string name="add_image">Image</string>
    <string name="image_1">Image1</string>
    <string name="image_2">Image2</string>
    <string name="image_3">Image3</string>
    <string name="btn_add">Add</string>
    <string name="select_photo_option">Select Options</string>
    <string name="cancel">Cancel</string>
    <string name="gallery_access_msg">Please allow access to Vastra for upload an image from Gallary.</string>
    <string name="gallery_permission_title">"Media permission is required in order to provide photo upload feature. "</string>
    <string name="btn_add_custom_sizes">Add Custom Sizes</string>
    <string name="title_select_prev_addded_sizes">Select sizes from previously added products</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_address">Address</string>
    <string name="label_postal_code">Postal Code</string>
    <string name="label_province">Province</string>
    <string name="label_city">City</string>
    <string name="label_brand_name">Brand Name</string>
    <string name="label_tagline">Tagline</string>
    <string name="link_change_password">Change password?</string>
    <string name="btn_save">Save</string>
    <string name="dialog_province_msg">Select Province</string>
    <string name="desc_available_quantity">Add available quantity of the product.</string>
    <string name="title_product_inventory">Product Inventory</string>
    <string name="hint_qty">Qty</string>
    <string name="title_catalogues">Catalogues</string>
    <string name="title_chat">Chat</string>
    <string name="noOfFollowers">15K</string>
    <string name="label_followers">Followers</string>
    <string name="btn_follow">Follow</string>
    <string name="label_catalogues">Catalogues</string>
    <string name="label_product_count">51 Products</string>
    <string name="hint_search_product">Search product title</string>
    <string name="link_show_all">Show All</string>
    <string name="title_follow">Follow</string>
    <string name="label_posts">Posts</string>
    <string name="like">Like</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="msg_register_design_info">Let us know about your fashion brand</string>
    <string name="btn_create_account">Create Account</string>
    <string name="error_empty_brand_name">Please enter brand name.</string>
    <string name="error_empty_tagline">Please enter tagline.</string>
    <string name="error_empty_catalogue">Please enter catalogue name.</string>
    <string name="error_empty_product_type">Please select product type.</string>
    <string name="error_empty_min_age">Please enter min age</string>
    <string name="error_empty_max_age">Please enter max age.</string>
    <string name="error_invalid_min_age">Invalid min age.</string>
    <string name="error_invalid_max_age">Invalid max age.</string>
    <string name="error_invalid_age_range">Please enter valid age range.</string>
    <string name="baby">Baby (1-2 years)</string>
    <string name="error_empty_title">Please enter product title.</string>
    <string name="error_empty_product_price">Please enter product price</string>
    <string name="error_invalid_product_price">Please enter valid price.</string>
    <string name="error_empty_product_weight">Please enter product weight.</string>
    <string name="error_invalid_product_weight">Please enter valid weight.</string>
    <string name="error_empty_material">Please enter product material</string>
    <string name="error_empty_material_percentage">Please enter material percentage.</string>
    <string name="error_invalid_material_percentage">Invalid percentage.</string>
    <string name="error_zero_product_price">Price value must be more than 0.</string>
    <string name="error_zero_product_weight">Product weight must be more than 0.</string>
    <string name="error_zero_material_percentage">Percentage must be between 0-100.</string>
    <string name="error_duplicate_material">This material is already added above.</string>
    <string name="error_invalid_total_material_percentage">Total material percentage should be 100.</string>
    <string name="error_empty_occasion">Please select occasion.</string>
    <string name="error_empty_pattern">Please select pattern.</string>
    <string name="error_empty_wash_care">Please select wash care.</string>
    <string name="error_empty_season">Please select season(s) when this product can be used.</string>
    <string name="none">None</string>
    <string name="error_insufficient_product_images">Please select at least 3 images of the product.</string>
    <string name="error_no_colors_found">No colors found.</string>
    <string name="skip">Skip</string>
    <string name="error_empty_product_color">Please add at least 1 product color.</string>
    <string name="error_duplicate_color">All prominent colors of the product should be unique.</string>
    <string name="error_duplicate_secondary_color">Secondary color should not be same as prominent color.</string>
    <string name="error_empty_letter_size">Please select letter size(s).</string>
    <string name="error_empty_weight_size">Please enter weight.</string>
    <string name="error_invalid_weight_size">Please enter valid weight.</string>
    <string name="error_empty_volume_size">Please enter volume.</string>
    <string name="error_invalid_volume_size">Please enter valid volume.</string>
    <string name="error_empty_custom_size">Please enter custom size.</string>
    <string name="error_duplicated_weight_size">All weight sizes must be unique.</string>
    <string name="error_duplicated_volume_size">All volume sizes must be unique.</string>
    <string name="error_duplicated_custom_size">All custom sizes must be unique.</string>
    <string name="error_empty_size">Please add at least 1 product size.</string>
</resources>