<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/btn_back"
        android:padding="8dp"
        android:src="@drawable/ic_back_gray_500_24dp"
        android:visibility="invisible"
        app:tint="@color/primary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/label_create_catalogue"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/text_primary_black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/create_catalogue_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/text_secondary_black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutCatalogueTitle"
            style="@style/Vastra.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/label_catalogue">

            <AutoCompleteTextView
                android:id="@+id/inputCatalogueTitle"
                style="@style/Vastra.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:imeOptions="actionDone"
                android:maxLength="30"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/btnNext"
            style="@style/Vastra.Button.Filled"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/btn_next" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>